treeview: render a frame around the rows, after drawing their background

https://bugzilla.gnome.org/show_bug.cgi?id=650424